--- a/index.html
+++ b/index.html
@@ -1,49 +1,84 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Cliff McCall - Full Stack Developer</title>
-        <link href ="stlye.css" rel="stylesheet">
-        <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    </head>
-    <body>
-      <div class="cliff">
-        <h1>Cliff McCall</h1>
-        <p>Web Developer</p>
-      </div> 
-      <div class="techstuffs">
-        <div class="techstuff">
-          <h2>Technical Skills</h2>
-          <ul class = "list">
-            <li>HTML/CSS</li>
-            <li>JavaScript/jQuery</li>
-            <li>CSS and JavaScript Frameworks</li>
-            <li>Testing/Debugging</li>
-          </ul>
-        </div>
-        <div class="techstuff">
-          <h2>GitHub Repositories</h2>
-          <btn onclick="loadRepo()">Click for Repos</btn>
-          <ul id = "repositories">
 
+<head>
+  <title>Cliff McCall - Full Stack Developer</title>
+  <!-- Link to stylesheet -->
+  <link href="stlye.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald:700|Roboto:400,900" rel="stylesheet">
+</head>
 
-          </ul>
-        </div>
-      </div>
-  <div class="social">
-    <div class="social-icons">
-      <h2>social media</h2>
-      <a href="http://www.linkedin.com/in/cliffordmccall" target="_blank"><img src="images/linkedin.png"></a>
-      <a href="https://github.com/cliffmccall1" target="_blank"><img src="images/github.png"></a>
-      <a href="https://www.facebook.com/briggsmc" target="_blank"><img src="images/facebook.png"></a>
-      <a href="https://www.instagram.com/heylumberjack/" target="_blank"><img src="images/insta.png"></a> 
-    </div>
+<body>
+  <div class="welcome">
+    <h1 class="welcome-title">Welcome to my <span>Portfolio</span></h1>
   </div>
+
+  <section class="intro">
+    <div class="intro-title">
+      <h2>Take the Risk</h2>
+    </div>
+    <div class="intro-body">
+      <p>In August 2017, my wife (Amanda) and I embarked on a journey without knowing were it would end. We quit or cushy
+        jobs in Atlanta and landed in Central Texas. In a few short months, we found it was worth the risk. We started projects
+        we wouldn't even have thought of back in Georgia. I was able to enroll in an online full-stack development course,
+        and we are finding our adventrue is really just begining.
+      </p>
+    </div>
+  </section>
+
+  <section class="about-me">
+    <img class="about-img" src="img/about.jpg" alt="A picture of Cliff McCall">
+    <h1 class="about-title">Cliff McCall</h1>
+    <h2 class="about-subtitle">Full-Stack Javascript Developer</h2>
+    <div class="about-text">
+
+      <p>Experience Includes: HTML, CSS, Javascript, Angular, React & Redux, Front-End Development & Responsive Web Design,
+        Bootstrap 4, MaterializeCSS, Node.JS, SQLite & MySQL, MongoDB, and Agile Project Management.
+      </p>
+    </div>
+  </section>
+
+
+  <section class="project">
+    <div class="projects">
+      <h1>GitHub Repositories</h1>
+      <input class="button" onclick="loadRepo()" type="submit" value="Get Repos">
+      <ul id="repositories">
+      </ul>
+    </div>
+  </section>
+  <!-- 
+      <section class="contact">
+        <h1>Contact me</h1>
+        <form action="">
+          <label class="name">Name:
+            <input type="text" id="name">
+          </label>
+
+          <label class="email">Email:
+            <input type="text" id="email">
+          </label>
+
+          <label class="message">Message:
+            <textarea name="" id="message"></textarea>
+          </label>
+          <input class="button" type="submit" value="Send">
+        </form>
+      </section> -->
+
   <footer>
-    <a class= "sticky" href="mailto:cliff.mccall1@gmail.com">cliff.mccall1@gmail.com<i class="far fa-envelope"></i></a>
+    <p>Follow me on social media</p>
+    <div class="social-icons">
+      <img src="img/facebook.png" alt="github" class="social-icon">
+      <img src="img/twitter.png" alt="twitter" class="social-icon">
+      <img src="img/instagram.png" alt="instagram" class="social-icon">
+      <img src="img/github.png" alt="github" class="social-icon">
+    </div>
+    <p class="copyright">Copyright 2018 Cliff McCall</p>
   </footer>
-<script src="script.js" type="text/javascript"></script>
+
+  <!-- Link to stylesheet -->
+  <script src="script.js" type="text/javascript"></script>
 </body>
