added docs folder

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
   </section>
 
 
-  <section class="project">
+  <!-- <section class="project">
     <div class="projects">
       <h1>GitHub Repositories</h1>
       <input class="button" onclick="loadRepo()" type="submit" value="Get Repos">
       <ul id="repositories">
       </ul>
     </div>
-  </section>
+  </section> -->
   <!-- 
       <section class="contact">
         <h1>Contact me</h1>
