added certificates section and cleaned up css

--- a/index.html
+++ b/index.html
@@ -37,43 +37,51 @@
     <h2 class="about-subtitle">Full-Stack Javascript Developer</h2>
     <div class="about-text">
 
-      <p>Experience Includes: HTML, CSS, Javascript, Angular, React & Redux, Front-End Development & Responsive Web
-        Design,
-        Bootstrap 4, MaterializeCSS, Node.JS, SQLite & MySQL, MongoDB, and Agile Project Management.
+      <p>Experience Includes: HTML, CSS, Javascript, Angular, Angular Material, React & Redux, Front-End Development &
+        Responsive Web
+        Design, MaterializeCSS, Node.JS, SQLite & MySQL, MongoDB, and Agile Project Management.
       </p>
     </div>
   </section>
 
-  <!-- 
-      <section class="contact">
-        <h1>Contact me</h1>
-        <form action="">
-          <label class="name">Name:
-            <input type="text" id="name">
-          </label>
 
-          <label class="email">Email:
-            <input type="text" id="email">
-          </label>
+  <section class="certifications">
+    <div class="certifications-title">Certifications</div>
+    <div class="row">
+      <div class="col">
+        <h1>Udemy Courses</h1>
+        <ul>
+          <li><a href="https://lh3.googleusercontent.com/RFu83alRYpcLu26gKWJ1Q1LxmOJcYnXN_J2hwOboxHCJML9kHva6DigmMnYOkP6dmRrN9aHEs5_rQL1YS10rMvq09J1TB-ldtOqVCGdQLImXfT6AtsBHLsP-acG5mIRx85CV7PddVg=w2400"
+              target="blank">Master GitHub in 2 Hours</a></li>
+          <li><a href="https://lh3.googleusercontent.com/YFo87FGB0k3IOLkkEdEbngGPbWr1i70Io-C7CtQydYgyhdVZlxu_Zi-ca7l5D5OacDUp_pEjGt8sYIly8f4pzKVaIzYMitQ4EuegKVNTBJD3gCiHuBxFZDqg8UIu6UhlDXvEev0nxw=w2400"
+              target="blank">Angular & NodeJS - The MEAN Stack Guide</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h1>FreeCodeCamp</h1>
+        <ul>
+          <li><a href="https://www.freecodecamp.org/certification/cliffmccall1/responsive-web-design" target="blank">Responsive
+              Web
+              Design</a></li>
+          <li><a href="https://www.freecodecamp.org/certification/cliffmccall1/javascript-algorithms-and-data-structures"
+              target="blank">JavaScript
+              Algorithms and Data Structures</a></li>
+        </ul>
+      </div>
+    </div>
 
-          <label class="message">Message:
-            <textarea name="" id="message"></textarea>
-          </label>
-          <input class="button" type="submit" value="Send">
-        </form>
-      </section> -->
+  </section>
 
   <footer>
-    <p>Follow me on social media</p>
+    <div class="footer-title">Follow me on social media</div>
     <div class="social-icons">
-      <a href="https://www.facebook.com/briggsmc"><img src="img/facebook.png" alt="github" class="social-icon"></a>
-      <a href="https://twitter.com/codinLumberjack"><img src="img/twitter.png" alt="twitter" class="social-icon"></a>
-      <a href="https://www.instagram.com/heylumberjack/"><img src="img/instagram.png" alt="instagram" class="social-icon"></a>
-      <a href="https://github.com/cliffmccall1"><img src="img/github.png" alt="github" class="social-icon"></a>
+      <a href="https://www.facebook.com/briggsmc" target="blank"><img src="img/facebook.png" alt="github" class="social-icon"></a>
+      <a href="https://twitter.com/codinLumberjack" target="blank"><img src="img/twitter.png" alt="twitter" class="social-icon"></a>
+      <a href="https://www.instagram.com/heylumberjack/" target="blank"><img src="img/instagram.png" alt="instagram"
+          class="social-icon"></a>
+      <a href="https://github.com/cliffmccall1" target="blank"><img src="img/github.png" alt="github" class="social-icon"></a>
     </div>
     <p class="copyright">Copyright 2018 Cliff McCall</p>
   </footer>
 
-  <!-- Link to stylesheet -->
-  <script src="script.js" type="text/javascript"></script>
 </body>
