--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
       <h2>Take the Risk</h2>
     </div>
     <div class="intro-body">
-      <p>In August 2017, my wife (Amanda) and I embarked on a journey without knowing were it would end. We quit or
-        cushy
-        jobs in Atlanta and landed in Central Texas. In a few short months, we found it was worth the risk. We started
-        projects
-        we wouldn't even have thought of back in Georgia. I was able to enroll in an online full-stack development
-        course,
-        and we are finding our adventrue is really just beginning.
+      <p>In August 2017, my wife (Amanda) and I embarked on a journey without knowing where it would end. We quit our
+        cushy jobs in Atlanta and landed in Central Texas. In a few short months, we found it was worth the risk. We
+        started projects we wouldn't even have thought of back in Georgia. I was able to enroll in an online full-stack
+        development course, and we are finding our adventure is really just beginning.
       </p>
     </div>
   </section>
@@ -37,9 +34,8 @@
     <h2 class="about-subtitle">Full-Stack Javascript Developer</h2>
     <div class="about-text">
 
-      <p>Experience Includes: HTML, CSS, Javascript, Angular, Angular Material, React & Redux, Front-End Development &
-        Responsive Web
-        Design, MaterializeCSS, Node.JS, SQLite & MySQL, MongoDB, and Agile Project Management.
+      <p>Experience Includes: HTML, CSS, SASS, Javascript, Angular, Angular Material, React & Redux, MaterializeCSS,
+        Node.JS, SQLite & MySQL, MongoDB, and Agile Project Management.
       </p>
     </div>
   </section>
