update welcome image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
   <div class="welcome">
-    <h1 class="welcome-title">Welcome to my <span>Portfolio</span></h1>
+    <div class="line"></div>
+    <img class="welcome-img" src="img/image_from_ios.png" alt="A picture of Cliff McCall">
+    <div class="line"></div>
   </div>
 
   <section class="intro">
@@ -33,7 +35,6 @@
     <h1 class="about-title">Cliff McCall</h1>
     <h2 class="about-subtitle">Full-Stack Javascript Developer</h2>
     <div class="about-text">
-
       <p>Experience Includes: HTML, CSS, SASS, Javascript, Angular, Angular Material, React & Redux, MaterializeCSS,
         Node.JS, SQLite & MySQL, MongoDB, and Agile Project Management.
       </p>
