updated html info and css

--- a/index.html
+++ b/index.html
@@ -44,20 +44,48 @@
 
   <section class="certifications">
     <div class="certifications-title">Certifications</div>
+    <div class="row bst">
+      <div class="col">
+        <h1>Bethel School of Technology</h1>
+        <p>I took part in the 24 week immersive Full Stack Development program for JavaScript from April 2018 to
+          October 2018. For the final six weeks
+          of the program, I was teamed up with a group of five other students from across the
+          world.</p>
+        <p>The name of our web application is <strong>SweatLog</strong>. It was developed with the fitness
+          enthusiast in mind. The features of <strong>SweatLog</strong> include logging your workouts, a "Benchmarks"
+          section to record personal records or goals, a map to find a gym near you, a timer, and a technique guide for
+          movements.</p>
+        <p>
+          The technologies used were HTML, CSS, JavaScript, Angular, Angular Material, Nodejs, and Express. GitHub was
+          used for
+          source control and for our project board to keep up with weekly sprints. We used MongoDB and mLab for our
+          database. The app was deployed on
+          Heroku. <strong>SweatLog</strong> was built for use on a desktop or mobile device.</p>
+        <p>If you would like to know more about our app or Bethel School of Technology, follow the links below.</p>
+      </div>
+      <div class="row links">
+        <div class="col">
+          <a href="https://github.com/9-10-a/final-project" target="blank" class="bstA"><strong>SweatLog Code</strong></a>
+        </div>
+        <div class="col">
+          <a href="https://sweatlog.herokuapp.com/" target="blank" class="bstA"><strong>SweatLog Deployed</strong></a>
+        </div>
+        <div class="col">
+          <a href="https://betheltech.net/" target="blank" class="bstA"><strong>Bethel School of Technology</strong></a>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col">
-        <h1>Udemy Courses</h1>
-        <ul>
-          <li><a class="button" data-modal="#modalOne">Master GitHub</a></li>
-          <li><a class="button" data-modal="#modalTwo">Angular & NodeJS - The MEAN Stack Guide</a></li>
-        </ul>
+        <h1><a href="https://www.udemy.com/" target="blank">Udemy Courses</a></h1>
+        <a class="button" data-modal="#modalOne">Master GitHub</a><br>
+        <a class="button" data-modal="#modalTwo">Angular & NodeJS - The MEAN Stack Guide</a>
       </div>
       <div class="col">
-        <h1>FreeCodeCamp</h1>
-        <ul>
-          <li><a class="button" data-modal="#modalFour">Responsive Web Design</a></li>
-          <li><a class="button" data-modal="#modalThree">JavaScript Algorithms and Data Structures</a></li>
-        </ul>
+        <h1><a href="https://www.freecodecamp.org/" target="blank">
+            FreeCodeCamp</a></h1>
+        <a class="button" data-modal="#modalFour">Responsive Web Design</a><br>
+        <a class="button" data-modal="#modalThree">JavaScript Algorithms and Data Structures</a>
       </div>
     </div>
   </section>
