fixed modal and css

--- a/index.html
+++ b/index.html
@@ -92,43 +92,34 @@
   <!-- MODAL -->
   <div id="modalOne" class="modal">
     <div class="modal-content">
-      <div class="contact-form">
-        <a class="close">&times;</a>
-        <h2>Master GitHub</h2><br>
-        <img class="modal-img" src="https://lh3.googleusercontent.com/RFu83alRYpcLu26gKWJ1Q1LxmOJcYnXN_J2hwOboxHCJML9kHva6DigmMnYOkP6dmRrN9aHEs5_rQL1YS10rMvq09J1TB-ldtOqVCGdQLImXfT6AtsBHLsP-acG5mIRx85CV7PddVg=w2400"
-          alt="">
-      </div>
+      <a class="close">&times;</a>
+      <h2>Master GitHub</h2><br>
+      <img class="modal-img" src="https://lh3.googleusercontent.com/RFu83alRYpcLu26gKWJ1Q1LxmOJcYnXN_J2hwOboxHCJML9kHva6DigmMnYOkP6dmRrN9aHEs5_rQL1YS10rMvq09J1TB-ldtOqVCGdQLImXfT6AtsBHLsP-acG5mIRx85CV7PddVg=w2400"
+        alt="">
     </div>
   </div>
   <div id="modalTwo" class="modal">
     <div class="modal-content">
-      <div class="contact-form">
-        <a class="close">&times;</a>
-        <h2>Angular & NodeJS - The MEAN Stack Guide</h2><br>
-        <img class="modal-img" src="https://lh3.googleusercontent.com/YFo87FGB0k3IOLkkEdEbngGPbWr1i70Io-C7CtQydYgyhdVZlxu_Zi-ca7l5D5OacDUp_pEjGt8sYIly8f4pzKVaIzYMitQ4EuegKVNTBJD3gCiHuBxFZDqg8UIu6UhlDXvEev0nxw=w2400"
-          alt="">
-      </div>
+      <a class="close">&times;</a>
+      <h2>Angular & NodeJS - The MEAN Stack Guide</h2><br>
+      <img class="modal-img" src="https://lh3.googleusercontent.com/YFo87FGB0k3IOLkkEdEbngGPbWr1i70Io-C7CtQydYgyhdVZlxu_Zi-ca7l5D5OacDUp_pEjGt8sYIly8f4pzKVaIzYMitQ4EuegKVNTBJD3gCiHuBxFZDqg8UIu6UhlDXvEev0nxw=w2400"
+        alt="">
     </div>
   </div>
   <div id="modalThree" class="modal">
     <div class="modal-content">
-      <div class="contact-form">
-        <span class="close">&times;</span>
-        <h2>JavaScript Algorithms and Data Structures</h2><br>
-        <img class="modal-img" src="https://lh3.googleusercontent.com/pkvqHSMxF683uHskH8IZI878VIAneSf7OltF6BKEEkfGs1rDIqut7XF15zWTS-dE8ZqqR504CREFS_FJOF-i_R3SLrTJN2_QSC62kWNBw3Jk2Yr89lIZ82pTupQWBIRqNyX9v5R1ng=w2400"
-          alt="">
-      </div>
+      <span class="close">&times;</span>
+      <h2>JavaScript Algorithms and Data Structures</h2><br>
+      <img class="modal-img" src="https://lh3.googleusercontent.com/pkvqHSMxF683uHskH8IZI878VIAneSf7OltF6BKEEkfGs1rDIqut7XF15zWTS-dE8ZqqR504CREFS_FJOF-i_R3SLrTJN2_QSC62kWNBw3Jk2Yr89lIZ82pTupQWBIRqNyX9v5R1ng=w2400"
+        alt="">
     </div>
   </div>
   <div id="modalFour" class="modal">
     <div class="modal-content">
-      <div class="contact-form">
-        <span class="close">&times;</span>
-        <h2>JavaScript
-          Algorithms and Data Structures</h2><br>
-        <img class="modal-img" src="https://lh3.googleusercontent.com/UZr9jUGwmMUIgLvHU2LqhgkLdmfMhYJJqLhhA8t8ACBcmWVKLLGVJxEwb6LlhTWa3PMJP6J7Yq58T5eYHWxLl5NwCr1Gu7qWRZUfTNkQWsdm-zDW-aKHofZ6MgxA8BN1JQL1UMx8Zg=w2400"
-          alt="">
-      </div>
+      <span class="close">&times;</span>
+      <h2>Responsive Web Design</h2><br>
+      <img class="modal-img" src="https://lh3.googleusercontent.com/UZr9jUGwmMUIgLvHU2LqhgkLdmfMhYJJqLhhA8t8ACBcmWVKLLGVJxEwb6LlhTWa3PMJP6J7Yq58T5eYHWxLl5NwCr1Gu7qWRZUfTNkQWsdm-zDW-aKHofZ6MgxA8BN1JQL1UMx8Zg=w2400"
+        alt="">
     </div>
   </div>
   <!-- MODAL END -->
