added links to modal

--- a/index.html
+++ b/index.html
@@ -79,46 +79,125 @@
       <div class="col">
         <h1><a href="https://www.udemy.com/" target="blank">Udemy Courses</a></h1>
         <a class="button" data-modal="#modalOne">Master GitHub</a><br>
-        <a class="button" data-modal="#modalTwo">Angular & NodeJS - The MEAN Stack Guide</a>
+        <a class="button" data-modal="#modalTwo">Angular & NodeJS - The MEAN Stack Guide</a><br>
+        <a class="button" data-modal="#modalFive">React 16 (incl. React Router 4 & Redux)</a><br>
       </div>
       <div class="col">
         <h1><a href="https://www.freecodecamp.org/" target="blank">
             FreeCodeCamp</a></h1>
         <a class="button" data-modal="#modalFour">Responsive Web Design</a><br>
-        <a class="button" data-modal="#modalThree">JavaScript Algorithms and Data Structures</a>
+        <a class="button" data-modal="#modalThree">JavaScript Algorithms and Data Structures</a><br>
       </div>
     </div>
   </section>
   <!-- MODAL -->
+  <!-- Udemy - Master GitHub -->
   <div id="modalOne" class="modal">
     <div class="modal-content">
       <a class="close">&times;</a>
-      <h2>Master GitHub</h2><br>
+      <h2>Master GitHub</h2>
+      <div class="modal-links">
+        <ul>
+          <li>
+            <a href="https://www.udemy.com/certificate/UC-8W3HLVW4/" target="blank">Verify Certificate</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/share/100imEBEAecFhXQno=/" target="blank">Link to Course</a>
+          </li>
+        </ul>
+      </div>
       <img class="modal-img" src="https://lh3.googleusercontent.com/RFu83alRYpcLu26gKWJ1Q1LxmOJcYnXN_J2hwOboxHCJML9kHva6DigmMnYOkP6dmRrN9aHEs5_rQL1YS10rMvq09J1TB-ldtOqVCGdQLImXfT6AtsBHLsP-acG5mIRx85CV7PddVg=w2400"
         alt="">
     </div>
   </div>
+  <!-- Udemy - Angular & NodeJS - The MEAN Stack -->
   <div id="modalTwo" class="modal">
     <div class="modal-content">
       <a class="close">&times;</a>
-      <h2>Angular & NodeJS - The MEAN Stack Guide</h2><br>
+      <h2>Angular & NodeJS - The MEAN Stack</h2>
+      <div class="modal-links">
+        <ul>
+          <li>
+            <a href="https://github.com/cliffmccall1/MEAN-stack-course" target="blank">Project GitHub Repository</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/certificate/UC-8W3HLVW4/" target="blank">Verify Certificate</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/share/1000nIBEAecFhXQno=/" target="blank">Link to Course</a>
+          </li>
+        </ul>
+      </div>
       <img class="modal-img" src="https://lh3.googleusercontent.com/YFo87FGB0k3IOLkkEdEbngGPbWr1i70Io-C7CtQydYgyhdVZlxu_Zi-ca7l5D5OacDUp_pEjGt8sYIly8f4pzKVaIzYMitQ4EuegKVNTBJD3gCiHuBxFZDqg8UIu6UhlDXvEev0nxw=w2400"
         alt="">
     </div>
   </div>
+  <!-- FCC - JavaScript Algorithms and Data Structures -->
   <div id="modalThree" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>JavaScript Algorithms and Data Structures</h2><br>
+      <h2>JavaScript Algorithms and Data Structures</h2>
+      <div class="modal-links">
+        <ul>
+          <li>
+            <a href="https://github.com/cliffmccall1/build-a-burger-app" target="blank">Project GitHub Repository</a>
+          </li>
+          <li>
+            <a href="https://www.freecodecamp.org/certification/cliffmccall1/javascript-algorithms-and-data-structures"
+              target="blank">Verify Certificate</a>
+          </li>
+          <li>
+            <a href="https://www.freecodecamp.org/" target="blank">Link to Course</a>
+          </li>
+        </ul>
+      </div>
       <img class="modal-img" src="https://lh3.googleusercontent.com/pkvqHSMxF683uHskH8IZI878VIAneSf7OltF6BKEEkfGs1rDIqut7XF15zWTS-dE8ZqqR504CREFS_FJOF-i_R3SLrTJN2_QSC62kWNBw3Jk2Yr89lIZ82pTupQWBIRqNyX9v5R1ng=w2400"
         alt="">
     </div>
   </div>
+  <!-- FCC - Responsive Web Design -->
   <div id="modalFour" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>Responsive Web Design</h2><br>
+      <h2>Responsive Web Design</h2>
+      <div class="modal-links">
+        <ul>
+          <li>
+            <a href="https://github.com/cliffmccall1/Responsive-Web-Design-Certification" target="blank">Project GitHub
+              Repository</a>
+          </li>
+          <li>
+            <a href="https://www.freecodecamp.org/certification/cliffmccall1/responsive-web-design" target="blank">Verify
+              Certificate</a>
+          </li>
+          <li>
+            <a href="https://www.freecodecamp.org/" target="blank">Link to Course</a>
+          </li>
+        </ul>
+      </div>
       <img class="modal-img" src="https://lh3.googleusercontent.com/UZr9jUGwmMUIgLvHU2LqhgkLdmfMhYJJqLhhA8t8ACBcmWVKLLGVJxEwb6LlhTWa3PMJP6J7Yq58T5eYHWxLl5NwCr1Gu7qWRZUfTNkQWsdm-zDW-aKHofZ6MgxA8BN1JQL1UMx8Zg=w2400"
+        alt="">
+    </div>
+  </div>
+  <!-- Udemy - React 16 Guide -->
+  <div id="modalFive" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>React 16 (incl. React Router 4 & Redux)</h2>
+      <div class="modal-links">
+        <ul>
+          <li>
+            <a href="https://github.com/cliffmccall1/build-a-burger-app" target="blank">Project GitHub Repository</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/certificate/UC-VB0QXDO6/" target="blank">Verify Certificate</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/share/1000uMBEAecFhXQno=/" target="blank">Link to Course</a>
+          </li>
+        </ul>
+      </div>
+      <img class="modal-img" src="https://lh3.googleusercontent.com/lfMSGLhnh3BSBNBs7J9ThQam7BdYoxZIz1PVb-T5gQrYjQfie8OC-enV6mhxgZj92iqe63x3XyU5aKUcXsuU2XzqBGg35NfjyBpDXelkzvZJVu0bkRN4VxuIXn1e8wv-gtYjmqG6Fg=w2400"
         alt="">
     </div>
   </div>
